--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "antd": "^4.22.3",
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.0",
