Bug fix eslint error

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "no-plusplus": 0,
     "no-restricted-syntax": 0,
     "max-len": 0,
-    "no-console": "off"
+    "no-console": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
