--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,22 @@
 {
-  "extends": ["airbnb-typescript/base"],
+  "extends": [
+    "airbnb-typescript/base"
+  ],
   "parserOptions": {
-      "project": ["./tsconfig.json"]
+    "project": [
+      "./tsconfig.json"
+    ]
   },
   "rules": {
     "import/prefer-default-export": 0,
     "import/extensions": 0,
+    "import/export": 0,
     "class-methods-use-this": 0,
     "no-plusplus": 0,
     "no-restricted-syntax": 0,
     "max-len": 0,
+    "no-param-reassign": 0,
     "no-console": "off",
-    "import/no-extraneous-dependencies": "off"
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
   }
 }
