--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "styled-components": "^6.0.8",
     "typescript": "^4.4.2",
     "url": "^0.11.3",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "retry-request": "^7.0.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
